--- a/kafka-docker/docker-compose-expose.yml
+++ b/kafka-docker/docker-compose-expose.yml
@@ -8,14 +8,20 @@ services:
     image: wurstmeister/kafka
     ports:
      - "9092:9092"
-    expose:
-     - "9093"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9093,OUTSIDE://localhost:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
-      KAFKA_LISTENERS: INSIDE://0.0.0.0:9093,OUTSIDE://0.0.0.0:9092
-      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_CREATE_TOPICS: "topic_test:1:1"
+      KAFKA_ADVERTISED_HOST_NAME: kafka
     volumes:
      - /var/run/docker.sock:/var/run/docker.sock
+  ingestion:
+      image: kafka-docker_ingestion
+      depends_on: 
+      - "kafka"
+      ports: 
+       - "5000:5000"
+  batchlayer:
+      build: .
+      depends_on: 
+      - "kafka"
+      ports: 
+      - "5001:5001"
