--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\Sven Metzger\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
+    "python.pythonPath": "/home/ruben/.pyenv/versions/3.6.8/bin/python"
 }
