--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       KAFKA_BROKER_URL: broker:9092
       TRANSACTIONS_TOPIC: queueing.transactions
       TRANSACTIONS_PER_SECOND: 1000
-    command: python3 app.py
+    command: python3 -u app.py
   detector:
     build: ./detector
     environment:
@@ -17,7 +17,7 @@ services:
       POSTGRES_DB: postgres
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-    command: python3 app.py
+    command: python3 -u app.py
     depends_on:
     - db
   speed:
