--- a/serving/Dockerfile
+++ b/serving/Dockerfile
@@ -1,9 +1,9 @@
-FROM python:3.6-alpine
+FROM python:3.6-slim
 
 WORKDIR /usr/app
 
 ADD ./requirements.txt ./
+
 RUN pip install -r requirements.txt
 ADD ./ ./
-
 
