--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,19 +20,19 @@ services:
     command: python3 -u app.py
     depends_on:
     - db
-  speed:
-    build: ./speed
-    environment:
-      KAFKA_BROKER_URL: broker:9092
-      TRANSACTIONS_TOPIC: queueing.transactions
-      LEGIT_TOPIC: streaming.transactions.legit
-      FRAUD_TOPIC: streaming.transactions.fraud
-      POSTGRES_DB: postgres
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-    command: python3 -u app.py
-    depends_on:
-    - db
+  # speed:
+  #   build: ./speed
+  #   environment:
+  #     KAFKA_BROKER_URL: broker:9092
+  #     TRANSACTIONS_TOPIC: queueing.transactions
+  #     LEGIT_TOPIC: streaming.transactions.legit
+  #     FRAUD_TOPIC: streaming.transactions.fraud
+  #     POSTGRES_DB: postgres
+  #     POSTGRES_USER: postgres
+  #     POSTGRES_PASSWORD: postgres
+  #   command: python3 -u app.py
+  #   depends_on:
+  #   - db
   db:
     image: postgres
     environment:
