--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,24 @@ services:
     - POSTGRES_DB=postgres
     - POSTGRES_USER=postgres
     - POSTGRES_PASSWORD=postgres
+  web:
+    build: ./cache
+    command: flask run --host=0.0.0.0 --port=8000
+    ports:
+      - 8000:8000
+    environment:
+      - FLASK_APP=app.py
+    env_file:
+      - env.list
+    depends_on:
+      - db
+  cache:
+    image: redis
+    command: redis-server --appendonly yes
+    volumes:
+      - redis_data:/data
+volumes:
+  redis_data:
 networks:
   default:
     external:
