--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
     - POSTGRES_PASSWORD=postgres
   web:
     build: ./cache
-    command: flask run --host=0.0.0.0 --port=8000
+    command: python -u -m flask run --host=0.0.0.0 --port=8000
     ports:
       - 8000:8000
     environment:
