Serving Layer + Flask + Nginx-Load-Balancer - working

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,11 +39,21 @@ services:
     - POSTGRES_DB=postgres
     - POSTGRES_USER=postgres
     - POSTGRES_PASSWORD=postgres
+  loadbalancer:
+    image: nginx:alpine
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./nginx-load-balancer.conf:/etc/nginx/nginx.conf
+    links:
+      - web
+    depends_on:
+      - web
   web:
     build: ./cache
-    command: python -u -m flask run --host=0.0.0.0 --port=8000
-    ports:
-      - 8000:8000
+    command: python -u -m flask run --host=0.0.0.0 --port=8080
+    # ports:
+    #   - 8000:8000
     environment:
       - FLASK_APP=app.py
       - POSTGRES_DB=postgres
